<resources>
    <string name="app_name">BUKUTAMU</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="lupa_password">lupa password?</string>
    <string name="sign_in">sign in</string>
    <string name="daftar">daftar</string>
    <string name="login">login</string>
    <string name="nama">Nama</string>
    <string name="no_telp">no telp</string>
    <string name="Daftar">Daftar</string>
</resources>
