<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4A9586"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="0dp"
            android:orientation="vertical"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4A9586"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_title"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="70dp"
                    android:background="#fff"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="40dp"
                    android:id="@+id/relativeLayout">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="50dp">

                        <EditText
                            android:id="@+id/tv_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_account"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/tv_pass"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_lock"
                            android:hint="@string/password"
                            android:inputType="numberPassword" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingTop="5dp"
                            android:text="@string/lupa_password" />


                        <Button
                            android:id="@+id/btn_masuk"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="#d67601"
                            android:text="@string/sign_in"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp" />
                        <Button
                            android:id="@+id/btn_daftar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="#d67601"
                            android:text="@string/daftar"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/user_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/login_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="#5EAE9E"
                    android:elevation="4dp"
                    android:src="@drawable/ic_account" />

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="23dp"
                    android:gravity="center_horizontal"
                    android:text="Login"
                    android:textColor="#fff"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>  
</androidx.constraintlayout.widget.ConstraintLayout>